Crash when using gizmos in specific order #65092

Closed
opened 2019-05-24 22:56:21 +02:00 by William Reynish · 8 comments

System Information
Operating system: Darwin-18.2.0-x86_64-i386-64bit 64 Bits
Graphics card: AMD Radeon R9 M395X OpenGL Engine ATI Technologies Inc. 4.1 ATI-2.4.10

Blender Version
Broken: version: 2.80 (sub 72), branch: filebrowser_redesign, commit date: 2019-05-24 18:20, hash: 965d4683c0
Worked: (Blender 2.8 2019-05-21)

Short description of error
Using gizmos in certain orders causes a Segmentation fault: 11 crash

Exact steps for others to reproduce the error
Using the factory defaults,:

  • Activate the rotate tool
  • Drag inside the gizmo to spin the object aroung
  • Go to the viewpoint gizmo in the right of the viewport and drag it to orbit the view
  • Crash
**System Information** Operating system: Darwin-18.2.0-x86_64-i386-64bit 64 Bits Graphics card: AMD Radeon R9 M395X OpenGL Engine ATI Technologies Inc. 4.1 ATI-2.4.10 **Blender Version** Broken: version: 2.80 (sub 72), branch: filebrowser_redesign, commit date: 2019-05-24 18:20, hash: `965d4683c0` Worked: (Blender 2.8 2019-05-21) **Short description of error** Using gizmos in certain orders causes a Segmentation fault: 11 crash **Exact steps for others to reproduce the error** Using the factory defaults,: - Activate the rotate tool - Drag inside the gizmo to spin the object aroung - Go to the viewpoint gizmo in the right of the viewport and drag it to orbit the view - Crash

Added subscriber: @WilliamReynish

Added subscriber: @WilliamReynish

#65093 was marked as duplicate of this issue

#65093 was marked as duplicate of this issue
Campbell Barton was assigned by William Reynish 2019-05-24 22:56:50 +02:00

Added subscriber: @ideasman42

Added subscriber: @ideasman42

@ideasman42 I assume this is related to recent changes to gizmos.

@ideasman42 I assume this is related to recent changes to gizmos.

Added subscriber: @dfelinto

Added subscriber: @dfelinto

I could not reproduce it, so I reported a similar issue separately. It is probably related - #65093.

I could not reproduce it, so I reported a similar issue separately. It is probably related - #65093.

This issue was referenced by e12f42946f

This issue was referenced by e12f42946f75d0883c17788521ccf7621e28c82c

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#65092
No description provided.