source/blender/windowmanager/gizmo/intern/wm_gizmo_group.c
@@ -921,8 +921,12 @@ void WM_gizmomaptype_group_unlink(bContext *C,
     WM_gizmomaptype_group_free(gzgt_ref);
   }
 
+  /* TODO(campbell): Gizmos may share keymaps, for now don't
+   * remove however we could flag them as temporary/owned by the gizmo. */
+#if 0
   /* Note, we may want to keep this keymap for editing */
   WM_keymap_remove(gzgt->keyconf, gzgt->keymap);
+#endif
 
   BLI_assert(WM_gizmomaptype_group_find_ptr(gzmap_type, gzgt) == NULL);
 }
